--- a/movie/index.html
+++ b/movie/index.html
@@ -4,9 +4,31 @@
 
 <!DOCTYPE html>
 <html>
-<body>
-    
-</body>
-<scirpt src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
+        <scirpt crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+
+    <scirpt>
+        const root = document.getElementById("root");
+        const h3 = React.createElement("h3", {
+            onMouseEnter: () => console.log("mouse enter"),
+        }, "Hello, I'm a span");
+        const btn = React.createElement(
+            "button", 
+            {
+                onClick: () => console.log("I'm clicked"),
+            }, 
+            "click me"
+        );
+        const container = React.createElement("div", null, [h3, btn])
+        ReactDom.render(container, root);
+    </scirpt>
 </html>
