--- a/Dream_JS/module/index.html
+++ b/Dream_JS/module/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" ßcontent="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <scirpt src="counte.js"></scirpt>
-  <script src="main.js"></script>
+  <scirpt type="module" src="counter.js"></scirpt>
+  <script type="module" src="main.js"></script>
 </head>
 <body>
 
