--- a/movie/state/converter.html
+++ b/movie/state/converter.html
@@ -1,87 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Document</title>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
+
+    <script type="text/babel">
+      function App() {
+        const [amount, setAmount] = React.useState(0);
+        const [flipped, setFlipped] = React.useState(false);
+        const onChange = (evnet) => {
+          setAmount(event.target.value); // 변화란, 사용자가 input에 입력하는 것
+        };
+        const reset = () => setAmount(0);
+        const onFlip = () => {
+          reset();
+          setFlipped((current) => !current);
+        };
+
+        return (
+          <div>
+            <h1> Super Converter </h1>
+            <div>
+              <lable htmlFor="amount">Minutes</lable>
+              <input
+                value={flipped ? amount * 60 : amount} // controlled input
+                id="amount"
+                placeholder="amount"
+                type="number"
+                onChange={onChange} // update input
+                disabled={flipped}
+              />
+            </div>
+            <div>
+              <lable htmlFor="hours"> Hours </lable>
+              <input
+                value={flipped ? amount : Math.round(amount / 60)}
+                id="hours"
+                placeholder="Hours"
+                type="number"
+                onChange={onChange}
+                disabled={!flipped} // 입력상태, flipped이 false-> disabled, 버튼 누르면 true->hour입력가능
+              />
+            </div>
+            <button onclick={reset}> Reset </button>
+            <button onclick={onFlip}> Filp </button>
+          </div>
+        );
+      }
+      const root = ReactDOM.createRoot(document.getElementById("root"));
+
+      root.render(<App />);
+    </script>
   </body>
-  <script
-    crossorigin
-    src="https://unpkg.com/react@17/umd/react.production.min.js"
-  ></script>
-  <script
-    crossorigin
-    src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
-  ></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script type="text/babel">
-    function MinutesToHours() {
-      const [amount, setAmount] = React.useState(0);
-      const [inverted, setInverted] = React.useState(false);
-      const onChange = (evnet) => {
-        setAmount(event.target.value); // 변화란, 사용자가 input에 입력하는 것
-      };
-      const reset = () => setAmount(0);
-      const onFlip = () => {
-        reset();
-        setInverted((current) => !current);
-      };
-
-      return (
-        <div>
-          <div>
-            <lable htmlFor="amount">Minutes</lable>
-            <input
-              value={inverted ? amount * 60 : amount} // controlled input
-              id="amount"
-              placeholder="amount"
-              type="number"
-              onChange={onChange} // update input
-              disabled={inverted}
-            />
-          </div>
-          <div>
-            <lable htmlFor="hours"> Hours </lable>
-            <input
-              value={inverted ? amount : Math.round(amount / 60)}
-              id="hours"
-              placeholder="Hours"
-              type="number"
-              onChange={onChange}
-              disabled={!inverted} // 입력상태, inverted이 false-> disabled, 버튼 누르면 true->hour입력가능
-            />
-          </div>
-          <button onclick={reset}> Reset </button>
-          <button onclick={onFlip}> Filp </button>
-        </div>
-      );
-    }
-    function KmToMiles() {
-      return <h3> KM 2 M </h3>;
-    }
-    function App() {
-      const [index, setIndex] = React.useState();
-      const onSelect = (event) => {
-        console.log(event.target.value);
-      };
-      return (
-        <div>
-          <h1> Super Converter </h1>
-          <select value={index} onChange={onSelect}>
-            <option value="0"> Minutes & Hours </option>
-            <option value="1"> Km & Miles </option>
-          </select>
-          {/* html란이므로, 자바스크립트 쓰면 텍스트로 인식 -> {} 안에 코딩
-           */}
-          {index === "0" ? <MinutesToHours /> : null}
-          {index === "1" ? <K /> : null}
-        </div>
-      );
-    }
-
-    const root = document.querySelector("#root");
-    // -------- render --------
-    ReactDOM.render(<App />, root);
-  </script>
 </html>
